feat(LocationIntegrationTest): add integration test for finding all locations when they exist